<resources>
    <string name="app_name">足下</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">登录</string>
    <string name="user_name">帐号</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_for_qq">QQ登录</string>
    <string name="register">注册</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="walk">步行</string>
    <string name="edit_info">修改资料</string>
    <string name="logout">退出帐号</string>
    <string name="setting">设置</string>
    <string name="send_to">发送至</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_walk">WalkActivity</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_edit_user_info">EditUserInfoActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_friend_info">FriendInfoActivity</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="title_activity_my_map">MyMapActivity</string>
    <string name="title_activity_show_map">ShowMapActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_suggestion">SuggestionActivity</string>
</resources>
