<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="256dp"
    android:background="@color/white"
    android:theme="@style/LoginLayoutTheme"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_login_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_user"
            android:layout_marginTop="20dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/ed_login_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="14dp"
            android:paddingLeft="6dp"
            android:hint="@string/user_name"
            android:maxLength="10"
            android:maxLines="1"
            android:textColor="@color/secondary_text"
            android:textColorHint="@color/secondary_text"
            android:textSize="16sp"
            android:singleLine="true"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_password"
            android:layout_marginTop="20dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="14dp"
            android:paddingLeft="6dp"
            android:hint="@string/password"
            android:maxLength="12"
            android:maxLines="1"
            android:textColor="@color/secondary_text"
            android:textColorHint="@color/secondary_text"
            android:textSize="16sp"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:textColorLink="@color/secondary_text"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_forget_password"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/secondary_text"
        android:layout_marginRight="32dp"
        android:layout_gravity="right"
        android:text="@string/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.CardView
        android:id="@+id/btn_login_login"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2dp"
        card_view:cardBackgroundColor="@color/primary_color">

        <TextView
            android:id="@+id/tv_login_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/login" />

    </android.support.v7.widget.CardView>

</LinearLayout>